# oz_class_backend

./: 3회차박스프로젝트.css  CSS_1_1  CSS_2_1  CSS_2_2  HTML_2  HTML_4  Mini_Project.html  README.md  app.py  chat1.css  clone.css  clone.html  clonecoding.html  diary.css  diary.html  footer.css  header.css  introduction.html  notice.css  project1.html  project3.css  project4.html  snowman.css  snowman.html
CSS/: CSS_1_2  boxproject.html
Django/oz_django_backend/: db.sqlite3  pyproject.toml
Django/oz_django_backend/boards/: admin.py  models.py
Django/oz_django_backend/boards/migrations/: 0001_initial.py  0003_board_created_at_board_updated_at.py
Django/oz_django_backend/bookmark/: admin.py  models.py
Django/oz_django_backend/bookmark/migrations/: 0001_initial.py
Django/oz_django_backend/bookmark/templates/: bookmark_list.html
Django/oz_django_backend/config/: authentication.py  settings.py  urls.py
Django/oz_django_backend/feeds/: models.py  serializers.py  urls.py
Django/oz_django_backend/feeds/migrations/: 0001_initial.py
Django/oz_django_backend/reviews/: models.py  serializers.py  urls.py
Django/oz_django_backend/reviews/migrations/: 0001_initial.py
Django/oz_django_backend/users/: serializers.py  urls.py  views.py
Django/oz_django_backend/users/migrations/: 0001_initial.py  0003_user_grade.py
HTML/: HTML_1  HTML_3
HTML,CSS/: boxproject.css  chat1.html  introduction.css  profile.css  profile.html  project1.css  project2.html  project3.html  text.css
OS/: 02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  30.c  (+21 more)
OS-EXAM/: README.md
(+72 files in other folders)
