[tool.poetry]
name = "oz-django-backend"
version = "0.1.0"
description = "python django project"
authors = ["krbibi <bsy5372@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
